# ReverseResearch

./: README.md
ReverseSearchCAlgorithms/: CMakeLists.txt  descriptor.cpp  descriptor.h  global.h  main.cpp  tools.h
ReverseSearchCAlgorithms/Imagine/: SIFT_VL.cpp
mysite/: db.sqlite3
mysite/insta/: admin.py  executable.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/insta/migrations/: 0001_initial.py  0002_auto_20170110_1058.py  0003_profile_username.py  0004_profile_user.py  0005_auto_20170112_1508.py  0006_auto_20170112_1509.py  0007_auto_20170112_1602.py  0008_auto_20170112_1629.py  0009_profile_last_request.py  0010_auto_20170130_1506.py  0011_auto_20170130_1509.py  0012_auto_20170130_1636.py  0013_auto_20170130_1637.py  0014_auto_20170215_2145.py  0015_auto_20170215_2155.py
mysite/insta/static/: style.css
mysite/insta/static/assets/: style.css
mysite/insta/static/assets/animate/: set.css
mysite/insta/templates/: add_picture.html  contactform.html  create_album.html  display_album.html  homepage.html  homepage1.html  login.html  profilepage.html  thanks.html  upload.html  waitpage.html
mysite/mysite/: settings.py  urls.py
